theme - add own fonts, fix tables being too wide sometimes

--- a/gidocgen/templates/basic/style.css
+++ b/gidocgen/templates/basic/style.css
@@ -1,5 +1,5 @@
 @import url("pygment.css");
-@import url('https://fonts.googleapis.com/css2?family=Red+Hat+Display:ital,wght@0,400;0,500;0,700;0,900;1,400;1,500;1,700;1,900&display=swap');
+@import url("fonts.css");
 @import url('https://fonts.googleapis.com/css2?family=Source+Code+Pro:ital,wght@0,400;0,500;0,600;0,700;1,400;1,500;1,600&display=swap');
 
 /*********************************
@@ -10,7 +10,7 @@
   /* colors */
   --text-color: #333;
   --text-color-muted: #999;
-  --primary: rgb(17, 112, 228);
+  --primary: rgb(28, 118, 228);
   --body-bg: #fff;
   --sidebar-primary: rgb(144, 194, 255);
   --sidebar-bg: #151515;
@@ -29,12 +29,13 @@
   --text-weight: normal;
   --heading-weight: 900;
   --heading-small-weight: 500;
+  --heading-table-weight: var(--heading-small-weight);
   --anchor-sign: "#";
 
   /* fonts */
-  --body-font-family: "Red Hat Display",-apple-system,BlinkMacSystemFont,"Segoe UI",Roboto,"Helvetica Neue",Arial,"Noto Sans",sans-serif,"Apple Color Emoji","Segoe UI Emoji","Segoe UI Symbol","Noto Color Emoji";
+  --body-font-family: "RedHatTextWeb",-apple-system,BlinkMacSystemFont,"Segoe UI",Roboto,"Helvetica Neue",Arial,"Noto Sans",sans-serif,"Apple Color Emoji","Segoe UI Emoji","Segoe UI Symbol","Noto Color Emoji";
   --body-font-size: clamp(16px, 1vw, 20px);
-  --heading-font-family: var(--body-font-family);
+  --heading-font-family: "RedHatDisplayWeb", var(--body-font-family);
   --monospace-font-family: "Source Code Pro", monospace;
   --monospace-font-size: calc(0.82 * var(--body-font-size)); /* Monospace fonts are very different in terms of font-sizes. Adjust this value to scale it */
   --table-font-size: 0.92em;    /* Tables often contain lots information. It's better to scale them down a big to get more sutff fitted inside */
@@ -55,6 +56,11 @@
     --sidebar-text-color: #fafafa;
     --box-bg: rgba(135, 135, 135, 0.1);
     --box-text-color: #fff;
+  }
+
+  /* fix dark theme syntax highlighting with a filter (for now) */
+  .highlight pre span {
+  	filter: brightness(6);
   }
 }
 
@@ -202,13 +208,6 @@ pre code {
   color: inherit;
 }
 
-pre code {
-  background: none;
-  border-radius: 0;
-  color: inherit;
-}
-
-
 h1 code, h2 code, h3 code, h4 code, h5 code, h6 code {
   font-family: inherit;
   font-weight: inherit;
@@ -335,9 +334,9 @@ footer {
 }
 
 .content {
-  padding: 2rem 4rem;
-  max-width: none;
+  padding: 2em 4em;
   overflow: visible;
+  max-width: calc(80ch + 8em);
 }
 
 footer {
@@ -427,10 +426,6 @@ footer {
   color: white;
 }
 
-.content, nav {
-  max-width: 68em;
-}
-
 .hidden {
   display: none !important;
 }
@@ -499,7 +494,7 @@ kbd {
 
 .docblock table {
   margin: .25em 0;
-  width: calc(100% - 3rem);
+  max-width: 100%;
   font-size: var(--table-font-size);
 }
 
@@ -510,7 +505,7 @@ kbd {
 .docblock table th {
   padding: .25em;
   text-align: left;
-  font-weight: 600;
+  font-weight: var(--heading-table-weight);
 }
 
 .docblock ul li,
